--- a/demo/miniprogram/project.config.json
+++ b/demo/miniprogram/project.config.json
@@ -40,5 +40,6 @@
   "projectname": "iotvideo-xp2p-demo",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
+  "libVersion": "2.19.3",
   "condition": {}
 }
