feat(video): update weapp demo

--- a/demo/miniprogram/project.config.json
+++ b/demo/miniprogram/project.config.json
@@ -38,7 +38,7 @@
     "useCompilerPlugins": false,
     "minifyWXML": true
   },
-  "appid": "wx1319af22356934bf",
+  "appid": "wx9e8fbc98ceac2628",
   "projectname": "iotvideo-xp2p-demo",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
