--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/xp2p-demo-1vN/demo",
+    "pages/xp2p-demo-debug/demo",
     "pages/xp2p-singleplayer/demo",
     "pages/xp2p-multiplayers/demo"
   ],
@@ -21,7 +22,8 @@
     "iot-p2p-player-ipc": "components/iot-p2p-player-ipc/player",
     "iot-p2p-player-server": "components/iot-p2p-player-server/player",
     "iot-p2p-control": "components/iot-p2p-control/control",
-    "iot-p2p-input": "components/iot-p2p-input/input"
+    "iot-p2p-input": "components/iot-p2p-input/input",
+    "iot-p2p-player-debug": "components/iot-p2p-player/player"
   },
   "sitemapLocation": "sitemap.json"
 }
