feat(weapp): 加个video测试页方便测云存录像

--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/xp2p-demo-1vN/demo",
     "pages/xp2p-demo-debug/demo",
     "pages/xp2p-singleplayer/demo",
-    "pages/xp2p-multiplayers/demo"
+    "pages/xp2p-multiplayers/demo",
+    "pages/test-video/test"
   ],
   "plugins": {
     "wechat-p2p-player": {
