feat(demo): 增加 LivePlayer 测试页

--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -5,6 +5,7 @@
     "pages/xp2p-demo-debug/demo",
     "pages/xp2p-singleplayer/demo",
     "pages/xp2p-multiplayers/demo",
+    "pages/test-live-player/test",
     "pages/test-video/test"
   ],
   "plugins": {
