--- a/demo/miniprogram/project.config.json
+++ b/demo/miniprogram/project.config.json
@@ -29,6 +29,7 @@
     },
     "enableEngineNative": false,
     "useIsolateContext": false,
+    "userConfirmedUseIsolateContext": true,
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
