--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -9,17 +9,19 @@
   ],
   "plugins": {
     "wechat-p2p-player": {
-      "version": "1.0.2",
+      "version": "1.1.0",
       "provider": "wx9e8fbc98ceac2628"
     },
     "xp2p": {
-      "version": "1.2.0",
+      "version": "1.3.0",
       "provider": "wx1319af22356934bf"
     }
   },
   "usingComponents": {
     "p2p-player": "plugin://wechat-p2p-player/p2p-player",
+    "p2p-pusher": "plugin://wechat-p2p-player/p2p-pusher",
     "iot-p2p-common-player": "components/iot-p2p-common-player/player",
+    "iot-p2p-common-pusher": "components/iot-p2p-common-pusher/pusher",
     "iot-p2p-player-ipc": "components/iot-p2p-player-ipc/player",
     "iot-p2p-player-server": "components/iot-p2p-player-server/player",
     "iot-p2p-control": "components/iot-p2p-control/control",
