--- a/demo/miniprogram/project.config.json
+++ b/demo/miniprogram/project.config.json
@@ -1,4 +1,6 @@
 {
+  "appid": "wx9e8fbc98ceac2628",
+  "projectname": "iotvideo-xp2p-github",
   "compileType": "miniprogram",
   "setting": {
     "urlCheck": false,
@@ -18,7 +20,6 @@
     "checkSiteMap": true,
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
-    "lazyloadPlaceholderEnable": false,
     "useMultiFrameRuntime": true,
     "useApiHook": true,
     "useApiHostProcess": true,
@@ -28,23 +29,21 @@
       "outputPath": ""
     },
     "useIsolateContext": false,
-    "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
     "minifyWXSS": true,
-    "disableUseStrict": false,
     "minifyWXML": true,
+    "ignoreUploadUnusedFiles": true,
+    "lazyloadPlaceholderEnable": false,
+    "disableUseStrict": false,
     "showES6CompileOption": false,
     "useCompilerPlugins": false,
-    "ignoreUploadUnusedFiles": true,
     "useStaticServer": true
   },
-  "appid": "wx9e8fbc98ceac2628",
-  "projectname": "miniprogram",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {},
-  "libVersion": "2.23.0",
+  "libVersion": "2.19.3",
   "packOptions": {
     "ignore": [],
     "include": []
