--- a/demo/miniprogram/project.config.json
+++ b/demo/miniprogram/project.config.json
@@ -2,6 +2,7 @@
   "appid": "wx9e8fbc98ceac2628",
   "projectname": "iotvideo-xp2p-github",
   "compileType": "miniprogram",
+  "libVersion": "2.19.3",
   "setting": {
     "urlCheck": false,
     "es6": true,
@@ -42,15 +43,5 @@
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
-  "condition": {},
-  "libVersion": "2.19.3",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
-  "editorSetting": {
-    "tabIndent": "insertSpaces",
-    "tabSize": 2
-  },
-  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
+  "condition": {}
 }
