--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -13,7 +13,7 @@
   ],
   "plugins": {
     "wechat-p2p-player": {
-      "version": "1.2.8",
+      "version": "dev-5699b37e22752675e30989499295fdf5",
       "provider": "wx9e8fbc98ceac2628",
       "export": "exportForPlugin.js"
     },
