--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/user-files/files",
     "pages/xp2p-demo-1vN/demo",
     "pages/xp2p-singleplayer/demo",
     "pages/xp2p-multiplayers/demo",
-    "pages/xp2p-records/records",
     "pages/test-p2p-player/player",
     "pages/test-live-player/test",
     "pages/test-video/test",
@@ -13,12 +13,12 @@
   ],
   "plugins": {
     "wechat-p2p-player": {
-      "version": "dev-5699b37e22752675e30989499295fdf5",
+      "version": "1.3.0",
       "provider": "wx9e8fbc98ceac2628",
       "export": "exportForPlugin.js"
     },
     "xp2p": {
-      "version": "3.1.2",
+      "version": "3.1.5",
       "provider": "wx1319af22356934bf"
     }
   },
