--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -5,16 +5,18 @@
     "pages/empty/empty",
     "pages/xp2p-demo-ipc/demo",
     "pages/xp2p-demo-ipc-playback/demo",
+    "pages/xp2p-demo-ipc-playback-cloudmjpg/demo",
+    "pages/xp2p-demo-ipc-playback-cloudvideo/demo",
     "pages/xp2p-demo-server/demo"
   ],
   "plugins": {
     "wechat-p2p-player": {
-      "version": "1.3.2",
+      "version": "1.3.3",
       "provider": "wx9e8fbc98ceac2628",
       "export": "exportForPlayerPlugin.js"
     },
     "xp2p": {
-      "version": "3.2.0",
+      "version": "3.2.1",
       "provider": "wx1319af22356934bf",
       "export": "exportForXp2pPlugin.js"
     }
