--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -7,7 +7,8 @@
     "pages/xp2p-demo-ipc-playback/demo",
     "pages/xp2p-demo-ipc-playback-cloudmjpg/demo",
     "pages/xp2p-demo-ipc-playback-cloudvideo/demo",
-    "pages/xp2p-demo-server/demo"
+    "pages/xp2p-demo-server/demo",
+    "pages/test-video/test"
   ],
   "plugins": {
     "wechat-p2p-player": {
@@ -16,7 +17,7 @@
       "export": "exportForPlayerPlugin.js"
     },
     "xp2p": {
-      "version": "3.2.1",
+      "version": "3.2.2",
       "provider": "wx1319af22356934bf",
       "export": "exportForXp2pPlugin.js"
     }
