--- a/demo/miniprogram/app.json
+++ b/demo/miniprogram/app.json
@@ -15,10 +15,10 @@
     "wechat-p2p-player": {
       "version": "1.3.0",
       "provider": "wx9e8fbc98ceac2628",
-      "export": "exportForPlugin.js"
+      "export": "exportForPlayerPlugin.js"
     },
     "xp2p": {
-      "version": "3.1.7",
+      "version": "3.1.10",
       "provider": "wx1319af22356934bf"
     }
   },
