feat: update demo 3.2.16

--- a/demo/miniprogramIoT/project.config.json
+++ b/demo/miniprogramIoT/project.config.json
@@ -33,8 +33,7 @@
     "packNpmRelationList": [],
     "minifyWXSS": true,
     "minifyWXML": true,
-    "ignoreUploadUnusedFiles": true,
-    "condition": false
+    "ignoreUploadUnusedFiles": true
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
@@ -46,6 +45,5 @@
   "editorSetting": {
     "tabIndent": "insertSpaces",
     "tabSize": 2
-  },
-  "libVersion": "2.33.0"
+  }
 }
