feat: 支持通知水位的版本4.1.3已发布，更新xp2p插件版本

--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -8,7 +8,7 @@
   ],
   "plugins": {
     "xp2p": {
-      "version": "dev-4cd13377eade602b63634fbc4fc2cda6",
+      "version": "4.1.3",
       "provider": "wx1319af22356934bf",
       "export": "exportForXp2pPlugin.js"
     }
