--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -8,7 +8,7 @@
   ],
   "plugins": {
     "xp2p": {
-      "version": "4.1.3",
+      "version": "dev-4b13b4c636d33bdd3a913aeb3583f38e",
       "provider": "wx1319af22356934bf",
       "export": "exportForXp2pPlugin.js"
     }
@@ -26,7 +26,7 @@
       ],
       "plugins": {
         "wechat-p2p-player": {
-          "version": "1.3.7",
+          "version": "dev-29260b1509dd2ea94d2af73063f52814",
           "provider": "wx9e8fbc98ceac2628",
           "export": "exportForPlayerPlugin.js"
         },
