--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -8,7 +8,7 @@
   ],
   "plugins": {
     "xp2p": {
-      "version": "dev-7b8e432a3cdb6e460f705fd6d031d557",
+      "version": "latest",
       "provider": "wx1319af22356934bf",
       "export": "exportForXp2pPlugin.js"
     }
