--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -26,7 +26,7 @@
       ],
       "plugins": {
         "wechat-p2p-player": {
-          "version": "1.3.8",
+          "version": "latest",
           "provider": "wx9e8fbc98ceac2628",
           "export": "exportForPlayerPlugin.js"
         },
