--- a/demo/miniprogramIoT/app.json
+++ b/demo/miniprogramIoT/app.json
@@ -11,7 +11,7 @@
   ],
   "plugins": {
     "xp2p": {
-      "version": "latest",
+      "version": "4.6.8",
       "provider": "wx1319af22356934bf",
       "export": "exportForXp2pPlugin.js"
     }
